# Projeto-RSA

./: readme.md
scripts-main/fleet-manager/cmd/drone/: CMakeLists.txt  geofence.wkt  package.xml
scripts-main/fleet-manager/cmd/drone/include/drone_core/: cmd_handler.hpp  coord_utils.hpp  drone_utils.hpp  mavsdk_node.hpp  status_tracker.hpp
scripts-main/fleet-manager/cmd/drone/include/drone_core/restrictions/: geofence.hpp  restrictions.hpp
scripts-main/fleet-manager/cmd/drone/src/: CMakeLists.txt  cmd_handler.cpp  coord_utils.cpp  drone_controller.cpp  drone_utils.cpp  mavsdk_node.cpp  status_tracker.cpp
scripts-main/fleet-manager/cmd/drone/src/restrictions/: CMakeLists.txt  geofence.cpp  restrictions.cpp
scripts-main/fleet-manager/cmd/server/: build.gradle  package.xml  pom.xml
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/: FleetmanServerApplication.java
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/api/: DroneApiController.java  LogEndpointExtension.java  MissionApiController.java  NotFoundException.java  PluginApiController.java  RequestLoggingFilter.java  SensorApiController.java  TimestampSerializer.java  WebSecurityConfig.java
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/api/converter/: DroneStateConverter.java  MissionStatusConverter.java  PluginTypeConverter.java
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/concurrent/: SyncChannel.groovy  ThreadExecutor.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/core/: DroneManager.java  GroundNode.java  MessagePublisher.java  MessageSubscriber.java  MqttConfiguration.java  StatusUpdater.java  TaskScheduler.java
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/exceptions/: DroneAssignmentException.groovy  ExceptionHandler.groovy  InstructionParsingException.groovy  InvalidPluginParameterException.groovy  MissingPluginParameterException.groovy  MissionException.groovy  ParameterException.groovy  TaskException.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/mission/: CommandParser.groovy  DroneAssigner.groovy  MessageClient.groovy  MissionClient.groovy  MissionManager.groovy  ScriptLoader.groovy  TaskLauncher.groovy  WrapperManager.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/mission/dsl/: DegreeCategory.groovy  DistanceCategory.groovy  MissionBinding.groovy  MissionHandlerBaseScript.groovy  PositionCategory.groovy  PositionUtils.groovy  SpeedCategory.groovy  TimeCategory.groovy  UtilCategory.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/model/drone/: Command.groovy  CommandEnum.groovy  Drone.groovy  (+5 more)
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/parameters/: ParameterClient.groovy  ParameterConverter.groovy  ParameterTracker.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/plugins/: MonitorPlugin.groovy  Plugin.groovy  PluginBinding.groovy  PluginClient.groovy  PluginConfig.groovy  PluginConfigReaderScript.groovy  PluginDTO.java  PluginInputDTO.java  PluginManager.groovy  PluginType.groovy  PluginValidator.groovy  ScheduledPlugin.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/remote/: RemoteStatusMessage.groovy  RemoteTask.groovy  RemoteTaskAction.groovy  RemoteTaskClient.groovy  RemoteTaskDTO.groovy  RemoteTaskHandler.groovy  RemoteTaskRequestBuilder.groovy  RemoteTaskState.groovy  RemoteTaskType.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/repo/: DroneRepository.java  MongoConfig.java  SensorRepository.java  TelemRepository.java
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/sensors/: SensorClient.groovy  SensorConfig.groovy  SensorData.groovy  SensorManager.groovy  SensorValidator.groovy
scripts-main/fleet-manager/cmd/server/src/main/java/org/nap/fleetman/server/utils/: BindingGenerator.groovy  CommandHandler.groovy  CommandValidator.groovy  CoordUtils.groovy  DroneLog.groovy  MissionUtils.groovy  NetUtils.groovy
scripts-main/fleet-manager/cmd/server/src/main/resources/: application.properties  logback-spring.xml
(+175 files in other folders)
