<?xml version="1.0"?>
<package format="2">
  <name>fleetman_server</name>
  <version>1.10.0</version>
  <description>Fleetman's ground station server module that bridges HTTP requests and ROS2 messages between the client
    applications and the drones, allowing commands to be issued and also retrieving telemetry data.
  </description>
  <maintainer email="margaridaocs@ua.pt">Margarida Silva</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>rosidl_generator_java</buildtool_depend>

  <build_depend>drone_interfaces</build_depend>
  <build_depend>friends_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcljava</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_generator_java</exec_depend>
  <exec_depend>drone_interfaces</exec_depend>
  <exec_depend>friends_interfaces</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rcljava</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_gradle</build_type>
  </export>
</package>
